scripts/kubernetes/test-resources/crash.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: crash
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: crash
    spec:
      containers:
        - name: crash
          image: busybox
          command: [ "sh", "-c", "exit 1" ]
