scripts/kubernetes/test-resources/mysql-daemonset.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: mysql-daemonset
  labels:
    name: mysql-daemonset
    app: demo
spec:
  template:
    spec:
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
              name: mysql
    metadata:
      labels:
        name: mysql
        role: mysqldb
        app: demo
