scripts/kubernetes/test-resources/never-live.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: never-live
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: never-live
    spec:
      containers:
        - name: failer
          image: luca3m/failer
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command: [ "cat", "/healthyy" ]
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            exec:
              command: [ "cat", "/healthy" ]
            initialDelaySeconds: 1
            periodSeconds: 30
