scripts/kubernetes/test-resources/nostarter-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nonstart
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nonstart
    spec:
      containers:
      - name: nonstart
        image: busybox
        command: [ "sh", "-c", "\"exit 1\""]
