scripts/kubernetes/test-resources/redis-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: redis
  labels:
    name: redis-deployment
    app: demo
spec:
  replicas: 3
  # selector identifies the set of Pods that this
  # replication controller is responsible for managing
  selector:
    matchLabels:
     name: redis
     role: redisdb
     app: demo
  template:
    spec:
      containers:
        - name: redis
          image: redis:alpine
          ports:
          - containerPort: 6379
            name: redis
          command: [ "redis-server", "--appendonly", "yes" ]
          livenessProbe:
             exec:
               command: [ "redis-cli", "ping"]
             initialDelaySeconds: 5
             periodSeconds: 5
          readinessProbe:
             exec:
               command: [ "redis-cli", "ping"]
             initialDelaySeconds: 5
             periodSeconds: 5
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 512Mi
    metadata:
      labels:
        # Important: these labels need to match the selector above
        # The api server enforces this constraint.
        name: redis
        role: redisdb
        app: demo
