scripts/kubernetes/test-resources/redis-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redis-ingress
spec:
  backend:
    serviceName: redis
    servicePort: 6380
